# breakout-game

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: index.css
src/components/game/: DesktopIcon.tsx  GameBoard.tsx  GameStats.tsx  ProofCounter.tsx  ProofTerminal.tsx
src/components/ui/: footer.tsx  mac-menubar.tsx  mac-window.tsx
src/context/: GameContext.tsx
src/hooks/: useGameLevels.tsx
src/lib/: wasmLoader.ts
src/pages/: About.tsx  Index.tsx
wasm/: Cargo.toml
wasm/src/: lib.rs
