[package]
name = "wasm-game-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1.7"
# SP1 related dependencies
sp1-core = { version = "0.2.0", default-features = false }
sp1-zkvm = { version = "0.2.0", default-features = false }
sp1-derive = "0.2.0"
rand = "0.8.5"
sha2 = "0.10.0"
# For WASM compatibility
rand_chacha = "0.3.1"
rand_core = "0.6.4"
wasm-bindgen-futures = "0.4.39"